--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,8 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.appartment_rent_and_sale"
-    compileSdkVersion flutter.compileSdkVersion
+   // compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -45,7 +46,8 @@ android {
         applicationId "com.example.appartment_rent_and_sale"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+       // minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21 
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
